fixtures/frontend/milestone-2/valid/source-provider-contract-declarations/main.aivi
provider custom.feed
    wakeup: providerTrigger

@source custom.feed
sig updates : Signal Int
