fixtures/frontend/milestone-2/invalid/custom-source-provider-option-type-mismatch/main.aivi
domain Duration over Int
    suffix ms : Int = value => Duration value

provider custom.feed
    option timeout : Duration
    wakeup: providerTrigger

@source custom.feed with {
    timeout: 1
}
signal updates : Signal Int
